--- a/EquipWPF/MainWindow.xaml
+++ b/EquipWPF/MainWindow.xaml
@@ -4,9 +4,47 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:EquipWPF"
+        xmlns:oxy="http://oxyplot.org/wpf"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
+    <Window.DataContext>
+        <local:MainViewModel/>
+    </Window.DataContext>
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="304*"/>
+            <RowDefinition Height="17*"/>
+        </Grid.RowDefinitions>
+        <TabControl x:Name="tabControl" Grid.Row="0" Margin="0,0,0,0" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch">
+            <TabItem Header="Начальны данные">
+                <DataGrid x:Name="dataGrid" Margin="0,0,0,0">
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Binding="{x:Null}" ClipboardContentBinding="{x:Null}" Header="Колонка1"/>
+                        <DataGridTemplateColumn ClipboardContentBinding="{x:Null}" Header="значение"/>
+                    </DataGrid.Columns>
+                </DataGrid>
+            </TabItem>
+            <TabItem Header="точки попадания">
+
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="242*"/>
+                        <RowDefinition Height="51*"/>
+                    </Grid.RowDefinitions>
+                    <Grid Grid.Row="0" Margin="0,0,-0.333,5">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="86*"/>
+                            <ColumnDefinition Width="86*"/>
+                        </Grid.ColumnDefinitions>
+                        <oxy:PlotView Grid.Column="0" Model="{Binding Model1}" Margin="10,10,9.667,9.667"/>
+                        <oxy:PlotView Grid.Column="1" Model="{Binding Model2}" Margin="10.333,10,9.667,9.667"/>
+                    </Grid>
+                    <Button x:Name="button" Grid.Row="1" Content="Button" Height="30" Click="button_Click" Margin="87,9,60.667,9"/>
+                </Grid>
+            </TabItem>
+            
+
+        </TabControl>
+        <ProgressBar x:Name="pb" Grid.Row="1" Margin="0,0,0,0" Value="{Binding Progress}" Minimum="{Binding Minimum}" Maximum="{Binding Maximum}" ToolTip="Progress"/>
     </Grid>
 </Window>
